tests/declaration_files_node/declaration_files_node.exp
Error --------------------------------------------------------------------------------------------- test_absolute.js:5:1

Cannot cast `B1.fun()` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test_absolute.js:5:1
   5| B1.fun() as string; // Error number ~> string
      ^^^^^^^^

References:
   node_modules/B.js.flow:3:32
   3| declare export function fun(): number;
                                     ^^^^^^ [1]
   test_absolute.js:5:13
   5| B1.fun() as string; // Error number ~> string
                  ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- test_absolute.js:9:1

Cannot cast `B2.fun()` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test_absolute.js:9:1
   9| B2.fun() as string; // Error number ~> string
      ^^^^^^^^

References:
   node_modules/B.js.flow:3:32
   3| declare export function fun(): number;
                                     ^^^^^^ [1]
   test_absolute.js:9:13
   9| B2.fun() as string; // Error number ~> string
                  ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- test_absolute.js:12:1

Cannot cast `C.fun()` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test_absolute.js:12:1
   12| C.fun() as string; // Error number ~> string
       ^^^^^^^

References:
   node_modules/package_with_full_main/code.js.flow:3:24
    3| declare var fun: () => number;
                              ^^^^^^ [1]
   test_absolute.js:12:12
   12| C.fun() as string; // Error number ~> string
                  ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- test_absolute.js:15:1

Cannot cast `D.fun()` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test_absolute.js:15:1
   15| D.fun() as string; // Error number ~> string
       ^^^^^^^

References:
   node_modules/package_with_partial_main/code.js.flow:3:32
    3| declare export function fun(): number;
                                      ^^^^^^ [1]
   test_absolute.js:15:12
   15| D.fun() as string; // Error number ~> string
                  ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- test_absolute.js:18:1

Cannot cast `E.fun()` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test_absolute.js:18:1
   18| E.fun() as string; // Error number ~> string
       ^^^^^^^

References:
   node_modules/package_with_no_package_json/index.js.flow:3:32
    3| declare export function fun(): number;
                                      ^^^^^^ [1]
   test_absolute.js:18:12
   18| E.fun() as string; // Error number ~> string
                  ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- test_absolute.js:21:1

Cannot cast `F.fun()` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test_absolute.js:21:1
   21| F.fun() as string; // Error number ~> string
       ^^^^^^^

References:
   node_modules/package_with_dir_main/dir/index.js.flow:3:31
    3| declare export var fun: () => number;
                                     ^^^^^^ [1]
   test_absolute.js:21:12
   21| F.fun() as string; // Error number ~> string
                  ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- test_relative.js:5:1

Cannot cast `A1.fun()` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test_relative.js:5:1
   5| A1.fun() as string; // Error number ~> string
      ^^^^^^^^

References:
   A.js.flow:3:32
   3| declare export function fun(): number;
                                     ^^^^^^ [1]
   test_relative.js:5:13
   5| A1.fun() as string; // Error number ~> string
                  ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------- test_relative.js:9:1

Cannot cast `A2.fun()` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   test_relative.js:9:1
   9| A2.fun() as string; // Error number ~> string
      ^^^^^^^^

References:
   A.js.flow:3:32
   3| declare export function fun(): number;
                                     ^^^^^^ [1]
   test_relative.js:9:13
   9| A2.fun() as string; // Error number ~> string
                  ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- test_relative.js:13:1

Cannot cast `CJS` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   test_relative.js:13:1
   13| CJS as number; // Error: string ~> number
       ^^^

References:
   CJS.js.flow:3:25
    3| declare module.exports: string;
                               ^^^^^^ [1]
   test_relative.js:13:8
   13| CJS as number; // Error: string ~> number
              ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- test_relative.js:16:9

Importing from an untyped module makes it `any` and is not safe! Did you mean to add `// @flow` to the top of
`./not_flow`? [untyped-import]

   16| require('./not_flow');
               ^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- test_relative.js:19:9

Cannot resolve module `./confusing_dir`. [cannot-resolve-module]

   19| require('./confusing_dir'); // error: cannot-resolve-module
               ^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------- test_relative.js:22:9

Cannot resolve module `./confusing_dir_dot_flow`. [cannot-resolve-module]

   22| require('./confusing_dir_dot_flow'); // error: cannot-resolve-module
               ^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 12 errors
